Added field to identify whether is running Jetson Nano or not

--- a/app/src/config.yaml
+++ b/app/src/config.yaml
@@ -1,7 +1,7 @@
 input_config:
   class_path: configuration.InputConfig
   init_args:
-    media_source: /home/dekr0/Videos/out-of-page.mp4
+    media_source: /home/dekr0/videos/test.mp4
     yolo_models: ../models/yolov7.pt
     device: "0"
 output_video_config:
@@ -10,7 +10,7 @@ output_result_config:
   class_path: configuration.OutputResultConfig
   init_args:
     save_csv: True
-    upload_period: 10
+    upload_period: 300
 algorithm_config:
   class_path: configuration.AlgorithmConfig
   init_args:
@@ -27,3 +27,4 @@ algorithm_config:
     # Turn this down if the camera is in high angle with respect with road
     # (higher the angle => lower the percentage)
     velocity_thersold_delta: -0.7
+legacy: True
